--- a/desafio.css
+++ b/desafio.css
@@ -27,7 +27,7 @@ h1,h3{
     text-align: center;
 }
 h1{
-    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-family:Arial, Helvetica, sans-serif;
     border-color: rgb(174, 184, 116);
 }
 h5{
