terminando os desafios

--- a/css/index.css
+++ b/css/index.css
@@ -1,10 +1,17 @@
 button{
     color: rgb(177, 235, 6);
     background-color: black;
+    flex-direction: column;
 }
 a{
     color: yellow;
     background-color: black;
+    text-decoration: none;
+}
+
+button{
+    border: none;
+    
 }
 body{
     color: yellow;
