--- a/css/futebol.css
+++ b/css/futebol.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url(santos.jpg);
+    background-image: url(/img/santos.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     text-align: center;
